--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<div class="c4-column-1-sub-2">
 				<div class="position-middle center-align">
 					<div class="size-40">
-						<a href="doc.html">
+						<a href="app/doc.html">
 							<i class="fa fa-puzzle-piece"></i>
 						</a>
 					</div>
@@ -82,7 +82,7 @@
 			<div class="c4-column-2-sub-2">
 				<div class="position-middle center-align">
 					<div class="size-33">
-						<a href="project.html">
+						<a href="app/project.html">
 							<i class="fa fa-pencil"></i>
 						</a>
 					</div>
@@ -102,7 +102,7 @@
 			<div class="c4-column-2-sub-4">
 				<div class="position-middle center-align">
 					<div class="size-35">
-						<a href="vendor.html">
+						<a href="app/vendor.html">
 							<i class="fa fa-umbrella"></i>
 						</a>
 					</div>
@@ -114,7 +114,7 @@
 			<div class="c4-column-3-sub-1">
 				<div class="position-middle center-align">
 					<div class="size-36">
-						<a href="started.html">
+						<a href="app/started.html">
 							<i class="fa fa-unlock-alt"></i>
 						</a>
 					</div>
@@ -124,7 +124,7 @@
 			<div class="c4-column-3-sub-2">
 				<div class="position-middle center-align">
 					<div class="size-34">
-						<a href="grid.html">
+						<a href="app/grid.html">
 							<i class="fa fa-cubes"></i>
 						</a>
 					</div>
@@ -136,7 +136,7 @@
 			<div class="c4-column-4-sub-1">
 				<div class="position-middle center-align">
 					<div class="size-40">
-						<a href="theme.html">
+						<a href="app/theme.html">
 							<i class="fa fa-laptop"></i>
 						</a>
 					</div>
