--- a/app/index.html
+++ b/app/index.html
@@ -15,15 +15,15 @@
 	<!-- title -->
 	<title>Core Framework</title>
 	<!-- Favicon -->
-	<link rel="icon" href="img/icon-core.png" type="image/x-icon">
+	<link rel="icon" href="https://cdn.rawgit.com/cdncore/cdncore.github.io/8d537e5c/img/icon-core.png" type="image/x-icon">
 	<!-- core.min.css -->
-	<link rel="stylesheet" href="css/core.min.css">
+	<link rel="stylesheet" href="https://cdn.rawgit.com/cdncore/cdncore.github.io/a986cda7/core5/core.min.css">
 	<!-- style css -->
 	<link rel="stylesheet" href="theme/css/theme.style.css">
 	<!-- font awesome -->
-	<link rel="stylesheet" href="font/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- modernizr development v3.5.0.min.js -->
-	<script src="js/modernizr-development-v3.5.0.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -92,7 +92,7 @@
 			<div class="c4-column-2-sub-3">
 				<div class="position-middle center-align">
 					<div class="size-28 c4-img">
-						<a href="https://github.com/getcore/getcore.github.io/tree/master/download" download="">
+						<a href="https://github.com/getcore/getcore.github.io/blob/master/download/core5.zip" download="">
 							<i class="fa fa-hand-o-down"></i>
 						</a>
 					</div>
