--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 	<!-- title -->
 	<title>Core Framework</title>
 	<!-- Favicon -->
-	<link rel="icon" href="app/img/icon-core.png" type="image/x-icon">
+	<link rel="icon" href="https://cdn.rawgit.com/cdncore/cdncore.github.io/8d537e5c/img/icon-core.png" type="image/x-icon">
 	<!-- core.min.css -->
-	<link rel="stylesheet" href="app/css/core.min.css">
+	<link rel="stylesheet" href="https://cdn.rawgit.com/cdncore/cdncore.github.io/a986cda7/core5/core.min.css">
 	<!-- style css -->
-	<link rel="stylesheet" href="app/theme/css/theme.style.css">
+	<link rel="stylesheet" href="theme/css/theme.style.css">
 	<!-- font awesome -->
-	<link rel="stylesheet" href="app/font/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- modernizr development v3.5.0.min.js -->
-	<script src="app/js/modernizr-development-v3.5.0.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
