--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<!-- core.min.css -->
 	<link rel="stylesheet" href="https://cdn.rawgit.com/cdncore/cdncore.github.io/a986cda7/core5/core.min.css">
 	<!-- style css -->
-	<link rel="stylesheet" href="theme/css/theme.style.css">
+	<link rel="stylesheet" href="app/theme/css/theme.style.css">
 	<!-- font awesome -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- modernizr development v3.5.0.min.js -->
