--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 	<!-- title -->
 	<title>Core Framework</title>
 	<!-- Favicon -->
-	<link rel="icon" href="https://cdn.rawgit.com/cdncore/cdncore.github.io/8d537e5c/img/icon-core.png" type="image/x-icon">
+	<link rel="icon" href="img/icon-core.png" type="image/x-icon">
 	<!-- core.min.css -->
-	<link rel="stylesheet" href="https://cdn.rawgit.com/cdncore/cdncore.github.io/a986cda7/core5/core.min.css">
+	<link rel="stylesheet" href="css/core.min.css">
 	<!-- style css -->
-	<link rel="stylesheet" href="app/theme/css/theme.style.css">
+	<link rel="stylesheet" href="theme/css/theme.style.css">
 	<!-- font awesome -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="font/css/font-awesome.min.css">
 	<!-- modernizr development v3.5.0.min.js -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+	<script src="js/modernizr-development-v3.5.0.min.js"></script>
 
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -51,7 +51,7 @@
 				<div class="position-middle center-align">
 					<div class="size-30 c4-img">
 						<a href="http://getcore.github.io">
-							<img src="app/img/icon-core.png" alt="core">
+							<img src="img/icon-core.png" alt="core">
 						</a>
 					</div>
 					<span class="hs hm">Core Neo v5</span>
@@ -60,7 +60,7 @@
 			<div class="c4-column-1-sub-2">
 				<div class="position-middle center-align">
 					<div class="size-40">
-						<a href="app/doc.html">
+						<a href="doc.html">
 							<i class="fa fa-puzzle-piece"></i>
 						</a>
 					</div>
@@ -82,7 +82,7 @@
 			<div class="c4-column-2-sub-2">
 				<div class="position-middle center-align">
 					<div class="size-33">
-						<a href="app/project.html">
+						<a href="project.html">
 							<i class="fa fa-pencil"></i>
 						</a>
 					</div>
@@ -92,7 +92,7 @@
 			<div class="c4-column-2-sub-3">
 				<div class="position-middle center-align">
 					<div class="size-28 c4-img">
-						<a href="https://github.com/getcore/getcore.github.io/blob/master/download/core5.zip" download="">
+						<a href="download.html">
 							<i class="fa fa-hand-o-down"></i>
 						</a>
 					</div>
@@ -102,7 +102,7 @@
 			<div class="c4-column-2-sub-4">
 				<div class="position-middle center-align">
 					<div class="size-35">
-						<a href="app/vendor.html">
+						<a href="vendor.html">
 							<i class="fa fa-umbrella"></i>
 						</a>
 					</div>
@@ -114,7 +114,7 @@
 			<div class="c4-column-3-sub-1">
 				<div class="position-middle center-align">
 					<div class="size-36">
-						<a href="app/started.html">
+						<a href="started.html">
 							<i class="fa fa-unlock-alt"></i>
 						</a>
 					</div>
@@ -124,7 +124,7 @@
 			<div class="c4-column-3-sub-2">
 				<div class="position-middle center-align">
 					<div class="size-34">
-						<a href="app/grid.html">
+						<a href="grid.html">
 							<i class="fa fa-cubes"></i>
 						</a>
 					</div>
@@ -136,7 +136,7 @@
 			<div class="c4-column-4-sub-1">
 				<div class="position-middle center-align">
 					<div class="size-40">
-						<a href="app/theme.html">
+						<a href="theme.html">
 							<i class="fa fa-laptop"></i>
 						</a>
 					</div>
@@ -151,6 +151,16 @@
 						</a>
 					</div>
 					<span class="hs hm">Author</span>
+				</div>
+			</div>
+			<div class="c4-column-4-sub-3">
+				<div class="position-middle center-align">
+					<div class="size-32">
+						<a href="#">
+							<i class="fa fa-question"></i>
+						</a>
+					</div>
+					<span class="hs hm"></span>
 				</div>
 			</div>
 		</div>
