--- a/app/project.html
+++ b/app/project.html
@@ -79,7 +79,7 @@
     <!-- script -->
 
     <!-- cdn jquery -->
-    <script src="js/jquery"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="vendor/onepagenav/js/onepagenav.js"></script>
     <script src="theme/js/theme.script.js"></script>
     <script src="js/core.js"></script>
