--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<div class="position-middle center-align">
 					<div class="size-30 c4-img">
 						<a href="http://getcore.github.io">
-							<img src="img/icon-core.png" alt="core">
+							<img src="app/img/icon-core.png" alt="core">
 						</a>
 					</div>
 					<span class="hs hm">Core Neo v5</span>
