--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			<div class="c4-column-2-sub-3">
 				<div class="position-middle center-align">
 					<div class="size-28 c4-img">
-						<a href="app/download.html">
+						<a href="https://github.com/getcore/getcore.github.io/blob/master/download/core5.zip" download="">
 							<i class="fa fa-hand-o-down"></i>
 						</a>
 					</div>
