--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<!-- Favicon -->
 	<link rel="icon" href="app/img/icon-core.png" type="image/x-icon">
 	<!-- core.min.css -->
-	<link rel="stylesheet" href="app/css/core.min.css">
+	<link rel="stylesheet" href="https://cdn.rawgit.com/cdncore/cdncore.github.io/a986cda7/core5/core.min.css">
 	<!-- style css -->
 	<link rel="stylesheet" href="app/theme/css/theme.style.css">
 	<!-- font awesome -->
