--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 	<!-- style css -->
 	<link rel="stylesheet" href="app/theme/css/theme.style.css">
 	<!-- font awesome -->
-	<link rel="stylesheet" href="app/font/css/font-awesome.min.css">
-	<!-- modernizr development v3.5.0.min.js -->
-	<script src="app/js/modernizr-development-v3.5.0.min.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<!-- modernizr development v2.8.3 -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -155,7 +155,7 @@
 			</div>
 			<div class="c4-column-4-sub-3">
 				<div class="position-middle center-align">
-					<div class="size-32">
+					<div class="size-34">
 						<a href="#">
 							<i class="fa fa-question"></i>
 						</a>
