--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
 			</div>
 			<div class="c4-column-4-sub-3">
 				<div class="position-middle center-align">
-					<div class="size-34">
-						<a href="#">
-							<i class="fa fa-question"></i>
+					<div class="size-32">
+						<a href="https://www.paypal.me/andikapaypal">
+							<i class="fa fa-paypal"></i>
 						</a>
 					</div>
-					<span class="hs hm"></span>
+					<span class="hs hm">Donation</span>
 				</div>
 			</div>
 		</div>
