--- a/app/index.html
+++ b/app/index.html
@@ -156,11 +156,11 @@
 			<div class="c4-column-4-sub-3">
 				<div class="position-middle center-align">
 					<div class="size-32">
-						<a href="#">
-							<i class="fa fa-question"></i>
+						<a href="https://www.paypal.me/andikapaypal">
+							<i class="fa fa-paypal"></i>
 						</a>
 					</div>
-					<span class="hs hm"></span>
+					<span class="hs hm">Donation</span>
 				</div>
 			</div>
 		</div>
