--- a/app/doc.html
+++ b/app/doc.html
@@ -50,6 +50,9 @@
                 <li class="size-40">
                     <a href="index.html">Core<sup class="size-12">framework</sup></a>
                 </li>
+                <!-- core5.1 -->
+                <li class="subheader"><a href="doc5.1.html">Doc5.1 <sup>New</sup></a></li>
+                <!-- core 5 -->
                 <li class="current"><a href="#typography">Typography</a></li>
                 <li><a href="#tables">Tables</a></li>
                 <li><a href="#display">Display</a></li>
