--- a/app/started.html
+++ b/app/started.html
@@ -48,7 +48,10 @@
 				<li class="size-40">
                     <a href="index.html">Core<sup class="size-12">framework</sup></a>
                 </li>
-				<li class="current"><a href="#basic">Basic Template</a></li>
+		<!-- cdn -->
+                <li class="subheader"><a href="http://cdncore.github.io">CDN Core <sup>New</sup></a></li>
+                <!-- cdn -->
+		<li class="current"><a href="#basic">Basic Template</a></li>
                 <li><a href="#support">Supported Browsers</a></li>
                 <li><a href="#version">Core Version</a></li>
 			</ul>
