--- a/app/vendor.html
+++ b/app/vendor.html
@@ -202,6 +202,143 @@ contact
 
 			</div>
 			<!-- end deep -->
+			<!-- hoverdir -->
+			<div class="deep" id="hoverdir">
+				<p class="section size-22">Hoverdir</p>
+			
+			<p class="section size-18">Navbar Smooth</p>
+			<a href="doc/doc5.1/hoverdir.html" target="_blank">
+				<button>Demo</button>
+			</a>	
+
+			<!-- code -->
+
+			<p class="section size-18">Hoverdir Grid</p>
+			<!-- hover smooth grid -->
+			<div class="da-thumbs" id="da-thumbs">
+				<div class="row">
+					<div class="column l4 m4 s12">
+						<div class="da-thumbs-items">
+							<a href="#">
+								<img src="img/c3.jpg" alt="hover">
+								<div class="da-thumbs-light"></div>
+							</a>
+						</div>
+						<div class="da-thumbs-items">
+							<a href="#">
+								<img src="img/c3.jpg" alt="hover">
+								<div class="da-thumbs-light"></div>
+							</a>
+						</div>
+					</div>
+					<div class="column l4 m4 s12">
+						<div class="da-thumbs-items">
+							<a href="#">
+								<img src="img/c3.jpg" alt="hover">
+								<div class="da-thumbs-light"></div>
+							</a>
+						</div>
+						<div class="da-thumbs-items">
+							<a href="#">
+								<img src="img/c3.jpg" alt="hover">
+								<div class="da-thumbs-light"></div>
+							</a>
+						</div>
+					</div>
+					<div class="column l4 m4 s12">
+						<div class="da-thumbs-items">
+							<a href="#">
+								<img src="img/c3.jpg" alt="hover">
+								<div class="da-thumbs-light"></div>
+							</a>
+						</div>
+						<div class="da-thumbs-items">
+							<a href="#">
+								<img src="img/c3.jpg" alt="hover">
+								<div class="da-thumbs-light"></div>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- end hover smooth grid -->
+
+			<!-- end code -->
+
+<xmp><!-- nav.smooth.css -->
+<link rel="stylesheet" href="vendor/hoversmooth/css/hover.smooth.css">
+<!-- nav.smooth.nojs.css -->
+<link rel="stylesheet" href="vendor/hoversmooth/css/hover.smooth.nojs.css">
+</xmp>
+
+<xmp><!-- hover smooth grid -->
+<body class="da-thumbs" id="da-thumbs">
+    <div class="row">
+        <div class="column l4 m4 s12">
+            <div class="da-thumbs-items">
+                <a href="#">
+                    <img src="img/c3.jpg" alt="hover">
+                    <div class="da-thumbs-light"></div>
+                </a>
+            </div>
+            <div class="da-thumbs-items">
+                <a href="#">
+                    <img src="img/c3.jpg" alt="hover">
+                    <div class="da-thumbs-light"></div>
+                </a>
+            </div>
+        </div>
+        <div class="column l4 m4 s12">
+            <div class="da-thumbs-items">
+                <a href="#">
+                    <img src="img/c3.jpg" alt="hover">
+                    <div class="da-thumbs-light"></div>
+                </a>
+            </div>
+            <div class="da-thumbs-items">
+                <a href="#">
+                    <img src="img/c3.jpg" alt="hover">
+                    <div class="da-thumbs-light"></div>
+                </a>
+            </div>
+        </div>
+        <div class="column l4 m4 s12">
+            <div class="da-thumbs-items">
+                <a href="#">
+                    <img src="img/c3.jpg" alt="hover">
+                    <div class="da-thumbs-light"></div>
+                </a>
+            </div>
+            <div class="da-thumbs-items">
+                <a href="#">
+                    <img src="img/c3.jpg" alt="hover">
+                    <div class="da-thumbs-light"></div>
+                </a>
+            </div>
+        </div>
+    </div>
+</body>
+<!-- end hover smooth grid -->
+</xmp>
+
+<xmp><!-- hoverdir -->
+<script src="vendor/hoversmooth/js/hover.smooth.js"></script>
+<script src="vendor/hoversmooth/js/hoverdir.js"></script>
+<script src="vendor/hoversmooth/js/hoverdir.setting.js"></script>
+</xmp>
+
+			</div>	
+			<!-- end hoverdir -->
+
+			<!-- doc nav -->
+			<div class="deep" id="doc">
+				<p class="section size-22">Nav Doc</p>
+				<a href="doc/doc5.1/navdoc.html" target="_blank">
+					<button>Demo</button>
+				</a>
+			</div>	
+			<!-- end doc nav -->
+
 	
         </div>
         <!-- end layout -->
