--- a/app/vendor.html
+++ b/app/vendor.html
@@ -350,9 +350,16 @@ contact
     <!-- jquery v3.2.1.min.js -->
 	<script src="js/jquery.min.js"></script>
 	<script src="js/core.js"></script>
+	<!-- owlcarousel -->
 	<script src="vendor/owlcarousel/js/owl.carousel.js"></script>
     <script src="vendor/owlcarousel/js/owl.carousel.setting.js"></script>
+    <!-- onepagenav -->
     <script src="vendor/onepagenav/js/onepagenav.js"></script>
+    <!-- hoverdir -->
+    <script src="vendor/hoversmooth/js/hover.smooth.js"></script>
+	<script src="vendor/hoversmooth/js/hoverdir.js"></script>
+	<script src="vendor/hoversmooth/js/hoverdir.setting.js"></script>
+	<!-- theme -->
     <script src="theme/js/theme.script.js"></script>
     <!-- end script -->
 
