--- a/app/doc5.1.html
+++ b/app/doc5.1.html
@@ -820,7 +820,13 @@
 			</div>
 
 			<!-- preview -->
-
+			<div class="section">
+				<a href="doc/doc5.1/preview.html" target="_blank">
+					<button>
+						Demo
+					</button>
+				</a>
+			</div>
 			<!-- end preview -->
 
 			<!-- code -->
